--- a/src/app/components/right-sidebar/right-sidebar.html
+++ b/src/app/components/right-sidebar/right-sidebar.html
@@ -22,7 +22,7 @@
     </h2>
     <ul class="p-2 space-y-2 pb-3 text-gray-700 text-sm max-h-64 overflow-y-auto">
       <li *ngFor="let note of notifications$ | async; let i = index"
-          class="flex items-center justify-between p-2 rounded hover:bg-gray-100 cursor-pointer">
+          class="flex items-center justify-between p-2 rounded hover:bg-gray-100 cursor-pointer transition-colors duration-200">
         <div class="flex items-center space-x-2">
           <span *ngIf="!note.read" 
             class="h-2 w-2 bg-red-500 rounded-full"
