Updated routes and outlet

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div class="flex-1 flex gap-4 w-full">
+  <!-- Feed / Dashboard -->
+  <app-feed class="flex-1"></app-feed>
+
+  <!-- Right Sidebar -->
+  <app-right-sidebar class="md:block w-64"></app-right-sidebar>
+</div>
