--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -3,5 +3,5 @@
   <app-feed class="flex-1"></app-feed>
 
   <!-- Right Sidebar -->
-  <app-right-sidebar class="md:block w-64"></app-right-sidebar>
+  <app-right-sidebar class="w-full md:w-64"></app-right-sidebar>
 </div>
