--- a/src/app/pages/groups/groups.html
+++ b/src/app/pages/groups/groups.html
@@ -1,1 +1,4 @@
-<p>groups works!</p>
+<div class="flex-1 p-4">
+  <h1 class="text-2xl font-bold mb-4">🗺️ Groups</h1>
+  <p>This is the groups page.</p>
+</div>
