--- a/src/app/pages/messages/messages.html
+++ b/src/app/pages/messages/messages.html
@@ -1,1 +1,4 @@
-<p>messages works!</p>
+<div class="flex-1 p-4">
+  <h1 class="text-2xl font-bold mb-4">💬 Messages</h1>
+  <p>This is the messages page.</p>
+</div>
