--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -47,6 +47,8 @@
 
     <a href="#" class="text-gray-700 hover:text-blue-600">Profile</a>
     <a href="#" class="text-gray-700 hover:text-blue-600">Settings</a>
-    <a href="#" class="text-gray-700 hover:text-blue-600">Logout</a>
+    <button (click)="logout()" class="text-gray-700 hover:text-blue-600">
+      Logout
+    </button>
   </div>
 </nav>
