Added profile page

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -45,10 +45,8 @@
       </div>
     </div>
 
-    <a href="#" class="text-gray-700 hover:text-blue-600">Profile</a>
+    <button (click)="goToProfile()" class="text-gray-700 hover:text-blue-600">Profile</button>
     <a href="#" class="text-gray-700 hover:text-blue-600">Settings</a>
-    <button (click)="logout()" class="text-gray-700 hover:text-blue-600">
-      Logout
-    </button>
+    <button (click)="logout()" class="text-gray-700 hover:text-blue-600">Logout</button>
   </div>
 </nav>
