Added smooth tranisition to signup button

--- a/src/app/components/signup/signup.html
+++ b/src/app/components/signup/signup.html
@@ -130,7 +130,7 @@
       <button
         type="submit"
         [disabled]="!isFormValid || emailChecking"
-        class="w-full bg-green-600 text-white p-2 rounded
+        class="w-full transition-colors duration-200 bg-green-600 text-white p-2 rounded 
               hover:bg-green-700
               disabled:bg-gray-400
               disabled:cursor-not-allowed
