Changed profile display name text style

--- a/src/app/pages/profile/profile.html
+++ b/src/app/pages/profile/profile.html
@@ -55,7 +55,7 @@
           <input type="text" formControlName="displayName" class="border rounded p-1 w-full"/>
         </ng-container>
         <ng-template #viewDisplayName>
-          <h1 class="text-2xl font-bold">{{ profile.displayName || 'Your Name' }}</h1>
+          <h1 class="text-2xl font-normal">{{ profile.displayName || 'Your Name' }}</h1>
         </ng-template>
       </div>
 
